[gd_scene load_steps=3 format=3 uid="uid://cpsrh675gohfv"]

[ext_resource type="Script" path="res://UI_UX/title_screen.gd" id="1_7qgd2"]
[ext_resource type="FontFile" uid="uid://c451r7g7skxo2" path="res://Fonts/04b25-font/04B25-VrZ.ttf" id="2_tt0fw"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7qgd2")
level_scene_path = "res://Levels/Template/level.tscn"
credit_scene_path = "res://UI_UX/credits.tscn"

[node name="BackgroundColour" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129412, 0.411765, 0.184314, 1)

[node name="StartButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -49.0
offset_right = 150.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_tt0fw")
theme_override_font_sizes/font_size = 40
text = "Start"

[node name="CreditButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 51.0
offset_right = 150.0
offset_bottom = 111.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_tt0fw")
theme_override_font_sizes/font_size = 40
text = "Credits"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 151.0
offset_right = 150.0
offset_bottom = 211.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_tt0fw")
theme_override_font_sizes/font_size = 40
text = "Quit"

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 100.0
offset_bottom = 148.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_fonts/font = ExtResource("2_tt0fw")
theme_override_font_sizes/font_size = 80
text = "TITLE OF GAME NAME"
horizontal_alignment = 1
uppercase = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CreditButton" to="." method="_on_credit_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
